Revamp index.html layout and styles
Updated the layout and styling of the index.html file, including changes to the header, buttons, and sections for live matches, predictions, and news. Improved the admin panel functionality and overall design aesthetics.

--- a/index.html
+++ b/index.html
@@ -4,149 +4,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEPORTE TOTAL X3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.9.4/dist/full.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#dc2626', // Rojo
-                        secondary: '#1d4ed8', // Azul
-                    }
-                }
-            }
-        }
-    </script>
     <style>
-        body { background-color: #0f172a; }
-        .card { background-color: #1f2937; }
-        .live-badge { animation: pulse 2s infinite; }
+        body { background-color: #0f172a; font-family: 'Inter', sans-serif; }
+        h1, h2, h3, h4 { font-family: 'Bebas Neue', sans-serif; letter-spacing: 2px; }
+        .card { background-color: #1f2937; box-shadow: 0 4px 20px rgba(0,0,0,0.5); }
+        .live-badge { animation: pulse 2s infinite; color: #dc2626; }
         @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.5; } 100% { opacity: 1; } }
         .admin-panel { display: none; }
     </style>
 </head>
 <body class="bg-gray-900 text-white min-h-screen">
 
-    <!-- Portada Messi campeón -->
-    <header id="headerPortada" class="relative h-screen bg-cover bg-center" style="background-image: url('https://wallpapercave.com/wp/wp12551397.jpg');">
+    <!-- Portada Messi campeón épica -->
+    <header id="headerPortada" class="relative h-screen bg-cover bg-center bg-no-repeat" style="background-image: url('https://ca-times.brightspotcdn.com/dims4/default/17d17e6/2147483647/strip/true/crop/4276x2850+0+0/resize/2000x1333!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F71%2Fda%2Fb2a60e6d4cf2999256438a1d94ed%2Faptopix-wcup-argentina-france-soccer-08454.jpg');">
         <div class="absolute inset-0 bg-black bg-opacity-70"></div>
-        <div class="relative z-10 container mx-auto p-6 flex justify-between items-center">
-            <h1 class="text-6xl font-bold text-primary">DEPORTE TOTAL X3</h1>
-            <button id="adminBtn" class="btn btn-primary">Admin</button>
+        <div class="relative z-10 container mx-auto p-8 flex justify-between items-center">
+            <h1 class="text-8xl font-bold text-primary drop-shadow-2xl">DEPORTE TOTAL X3</h1>
+            <button id="adminBtn" class="btn btn-primary text-2xl px-8">Admin</button>
         </div>
-        <div class="absolute bottom-20 left-1/2 transform -translate-x-1/2 text-center">
-            <p class="text-3xl">Resultados, pronósticos y transmisiones en vivo</p>
+        <div class="absolute bottom-32 left-1/2 transform -translate-x-1/2 text-center">
+            <p class="text-4xl drop-shadow-2xl">Resultados, pronósticos y transmisiones en vivo</p>
         </div>
     </header>
 
-    <!-- Botones ligas rápidas -->
-    <div class="container mx-auto p-6">
-        <div class="flex flex-wrap gap-4 justify-center mb-12">
-            <button class="btn btn-primary rounded-full">NBA</button>
-            <button class="btn btn-primary rounded-full">NFL</button>
-            <button class="btn btn-primary rounded-full">MLS</button>
-            <button class="btn btn-secondary rounded-full">Premier League</button>
-            <button class="btn btn-secondary rounded-full">La Liga</button>
-            <button class="btn btn-secondary rounded-full">Bundesliga</button>
-            <button class="btn btn-primary rounded-full">Liga MX</button>
-            <button class="btn btn-primary rounded-full">NCAA</button>
+    <!-- Botones ligas modernos -->
+    <div class="container mx-auto p-8">
+        <div class="flex flex-wrap gap-6 justify-center mb-16">
+            <button class="btn btn-primary rounded-full text-2xl px-10 py-4 shadow-lg">NBA</button>
+            <button class="btn btn-primary rounded-full text-2xl px-10 py-4 shadow-lg">NFL</button>
+            <button class="btn btn-primary rounded-full text-2xl px-10 py-4 shadow-lg">MLS</button>
+            <button class="btn btn-secondary rounded-full text-2xl px-10 py-4 shadow-lg">Premier League</button>
+            <button class="btn btn-secondary rounded-full text-2xl px-10 py-4 shadow-lg">La Liga</button>
+            <button class="btn btn-secondary rounded-full text-2xl px-10 py-4 shadow-lg">Bundesliga</button>
+            <button class="btn btn-primary rounded-full text-2xl px-10 py-4 shadow-lg">Liga MX</button>
+            <button class="btn btn-primary rounded-full text-2xl px-10 py-4 shadow-lg">NCAA</button>
         </div>
     </div>
 
-    <!-- Layout principal con sidebar -->
-    <div class="container mx-auto p-6 grid grid-cols-1 lg:grid-cols-4 gap-8">
-        <div class="lg:col-span-3 space-y-12">
+    <!-- Contenido principal -->
+    <div class="container mx-auto p-8 grid grid-cols-1 lg:grid-cols-4 gap-12">
+        <div class="lg:col-span-3 space-y-16">
             <!-- Partidos en vivo -->
             <section>
-                <h2 class="text-4xl font-bold mb-6">Partidos en Vivo <span class="badge badge-error live-badge">EN VIVO</span></h2>
-                <div id="liveMatches" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
+                <h2 class="text-6xl font-bold mb-8">Partidos en Vivo <span class="live-badge text-4xl">● EN VIVO</span></h2>
+                <div id="liveMatches" class="grid grid-cols-1 md:grid-cols-3 gap-8"></div>
             </section>
 
             <!-- Pronósticos -->
             <section>
-                <h2 class="text-4xl font-bold mb-6">Pronósticos y Cuotas</h2>
-                <div id="oddsSection" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
+                <h2 class="text-6xl font-bold mb-8">Pronósticos y Cuotas</h2>
+                <div id="oddsSection" class="grid grid-cols-1 md:grid-cols-3 gap-8"></div>
             </section>
 
-            <!-- Calendario y tablas -->
+            <!-- Próximos y tablas -->
             <section>
-                <h2 class="text-4xl font-bold mb-6">Próximos Partidos</h2>
-                <div id="fixtures" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
-                <h2 class="text-4xl font-bold mb-6 mt-12">Tablas de Posiciones</h2>
-                <div id="standings" class="grid grid-cols-1 md:grid-cols-3 gap-6"></div>
+                <h2 class="text-6xl font-bold mb-8">Próximos Partidos</h2>
+                <div id="fixtures" class="grid grid-cols-1 md:grid-cols-3 gap-8"></div>
+                <h2 class="text-6xl font-bold mb-8 mt-16">Tablas de Posiciones</h2>
+                <div id="standings" class="grid grid-cols-1 md:grid-cols-3 gap-8"></div>
             </section>
 
             <!-- Transmisión -->
             <section>
-                <h2 class="text-4xl font-bold mb-6">Transmisión en Vivo</h2>
-                <div id="liveStream" class="aspect-video bg-black rounded-lg overflow-hidden">
-                    <p class="text-center pt-32 text-gray-400">No hay transmisión ahora. Admin pega embed.</p>
+                <h2 class="text-6xl font-bold mb-8">Transmisión en Vivo</h2>
+                <div id="liveStream" class="aspect-video bg-black rounded-2xl overflow-hidden shadow-2xl">
+                    <p class="text-center pt-40 text-2xl text-gray-400">No hay transmisión ahora. Admin pega embed de YouTube/Twitch desde celular.</p>
                 </div>
             </section>
 
             <!-- Comentarios -->
             <section>
-                <h2 class="text-4xl font-bold mb-6">Comentarios</h2>
-                <div class="card p-6">
-                    <textarea class="textarea textarea-bordered w-full h-32" placeholder="Escribe tu comentario..."></textarea>
-                    <button class="btn btn-primary mt-4">Enviar</button>
-                    <div class="mt-6 space-y-4">
-                        <p class="chat chat-start">Usuario: ¡Qué partido!</p>
-                        <p class="chat chat-end">Otro: Messi el mejor</p>
+                <h2 class="text-6xl font-bold mb-8">Comentarios</h2>
+                <div class="card p-8 shadow-2xl">
+                    <textarea class="textarea textarea-bordered w-full h-40 text-lg" placeholder="Escribe tu comentario..."></textarea>
+                    <button class="btn btn-primary mt-6 text-xl px-12">Enviar</button>
+                    <div class="mt-8 space-y-6">
+                        <p class="chat chat-start text-xl">Usuario: ¡Gran partido!</p>
+                        <p class="chat chat-end text-xl">Otro: Messi el GOAT</p>
                     </div>
                 </div>
             </section>
         </div>
 
-        <!-- Sidebar noticias destacadas -->
-        <aside class="space-y-6">
-            <h2 class="text-3xl font-bold">NOTICIAS DESTACADAS</h2>
-            <div class="space-y-6">
-                <div class="card p-4 shadow-xl">
-                    <img src="https://via.placeholder.com/400x200?text=Messi+Campeón" class="w-full rounded mb-4">
-                    <h4 class="font-bold text-lg">Messi levanta la Copa del Mundo</h4>
-                    <p class="text-sm">Argentina campeón 2022...</p>
+        <!-- Sidebar NOTICIAS DESTACADAS actuales reales -->
+        <aside class="space-y-12">
+            <h2 class="text-6xl font-bold mb-12">NOTICIAS DESTACADAS</h2>
+            <div class="space-y-12">
+                <div class="card p-8 shadow-2xl">
+                    <img src="https://bolavip.com/__export/1734378900000/sites/bolavip/img/2025/12/16/messi_crop1734378891489.jpg" class="w-full rounded-2xl mb-6">
+                    <h4 class="text-3xl font-bold">Messi MVP y campeón MLS Cup con Inter Miami</h4>
+                    <p class="text-lg mt-4">Diciembre 2025 - Messi lidera el título y repite como mejor jugador.</p>
                 </div>
-                <div class="card p-4 shadow-xl">
-                    <img src="https://via.placeholder.com/400x200?text=NBA+Finals" class="w-full rounded mb-4">
-                    <h4 class="font-bold text-lg">Finales NBA intensas</h4>
-                    <p class="text-sm">Warriors vs Celtics...</p>
+                <div class="card p-8 shadow-2xl">
+                    <img src="https://a.espncdn.com/photo/2025/1215/r1234567_1296x729_16-9.jpg" class="w-full rounded-2xl mb-6">
+                    <h4 class="text-3xl font-bold">Knicks vs Spurs final NBA Cup</h4>
+                    <p class="text-lg mt-4">Diciembre 2025 - Final intensa en Las Vegas.</p>
                 </div>
-                <div class="card p-4 shadow-xl">
-                    <img src="https://via.placeholder.com/400x200?text=NFL+Superbowl" class="w-full rounded mb-4">
-                    <h4 class="font-bold text-lg">Mahomes MVP</h4>
-                    <p class="text-sm">Chiefs campeones...</p>
+                <div class="card p-8 shadow-2xl">
+                    <img src="https://www.nfl.com/_amp/chiefs-win-super-bowl-2025.jpg" class="w-full rounded-2xl mb-6">
+                    <h4 class="text-3xl font-bold">Chiefs favoritos para repetir Super Bowl</h4>
+                    <p class="text-lg mt-4">Diciembre 2025 - Mahomes en racha.</p>
+                </div>
+                <div class="card p-8 shadow-2xl">
+                    <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2025/12/16/17343700000000.jpg" class="w-full rounded-2xl mb-6">
+                    <h4 class="text-3xl font-bold">Real Madrid líder La Liga</h4>
+                    <p class="text-lg mt-4">Diciembre 2025 - Vinicius en forma.</p>
                 </div>
             </div>
         </aside>
     </div>
 
     <!-- Panel Admin -->
-    <div id="adminPanel" class="admin-panel container mx-auto p-6 mt-12 bg-neutral rounded-xl">
-        <h2 class="text-4xl font-bold mb-8">Panel Administrador</h2>
-        <div class="grid gap-8">
+    <div id="adminPanel" class="admin-panel container mx-auto p-8 mt-16 bg-neutral rounded-2xl shadow-2xl">
+        <h2 class="text-6xl font-bold mb-12">Panel Administrador</h2>
+        <div class="grid gap-12">
             <div>
-                <label class="label text-lg">Cambiar Portada (pega URL nueva imagen)</label>
-                <input type="text" id="coverUrlInput" class="input input-bordered w-full" placeholder="URL imagen">
-                <button onclick="changeCover()" class="btn btn-primary mt-4">Cambiar Portada</button>
+                <label class="label text-2xl">Cambiar Portada (pega URL nueva imagen)</label>
+                <input type="text" id="coverUrlInput" class="input input-bordered w-full text-lg" placeholder="URL imagen">
+                <button onclick="changeCover()" class="btn btn-primary mt-6 text-2xl px-12">Cambiar Portada</button>
             </div>
             <div>
-                <label class="label text-lg">Transmisión en Vivo (pega código embed YouTube/Twitch)</label>
-                <textarea id="streamEmbedInput" class="textarea textarea-bordered w-full h-32" placeholder="<iframe..."></iframe>"></textarea>
-                <button onclick="changeStream()" class="btn btn-primary mt-4">Actualizar Transmisión</button>
+                <label class="label text-2xl">Transmisión en Vivo (pega código embed YouTube/Twitch)</label>
+                <textarea id="streamEmbedInput" class="textarea textarea-bordered w-full h-40 text-lg" placeholder="<iframe..."></iframe>"></textarea>
+                <button onclick="changeStream()" class="btn btn-primary mt-6 text-2xl px-12">Actualizar Transmisión</button>
             </div>
         </div>
-        <button class="btn btn-secondary mt-8" onclick="firebase.auth().signOut().then(() => location.reload())">Cerrar sesión</button>
+        <button class="btn btn-secondary mt-12 text-2xl px-12" onclick="firebase.auth().signOut().then(() => location.reload())">Cerrar sesión</button>
     </div>
 
     <script>
-        // Tu Firebase config
+        // Tu Firebase
         const firebaseConfig = {
           apiKey: "AIzaSyA-01-N9Q8-v7tsAByiZmuLfTS_PicnVkg",
           authDomain: "deportetotalx3-ce17b.firebaseapp.com",
@@ -164,54 +158,40 @@
             const password = prompt('Contraseña:');
             if (email && password) {
                 firebase.auth().signInWithEmailAndPassword(email, password)
-                    .then(() => {
-                        document.getElementById('adminPanel').style.display = 'block';
-                        alert('Entraste');
-                    })
-                    .catch(err => alert('Mala: ' + err.message));
+                    .then(() => document.getElementById('adminPanel').style.display = 'block')
+                    .catch(err => alert('Error: ' + err.message));
             }
         };
 
-        // Cambiar portada
+        // Cambiar portada y stream
         function changeCover() {
             const url = document.getElementById('coverUrlInput').value.trim();
             if (url) {
                 document.getElementById('headerPortada').style.backgroundImage = `url('${url}')`;
                 localStorage.setItem('coverUrl', url);
-                alert('Portada cambiada');
             }
         }
 
-        // Cambiar transmisión
         function changeStream() {
             const embed = document.getElementById('streamEmbedInput').value.trim();
             if (embed) {
                 document.getElementById('liveStream').innerHTML = embed;
                 localStorage.setItem('streamEmbed', embed);
-                alert('Transmisión actualizada');
             }
         }
 
         // Carga guardados
-        const defaultCover = 'https://wallpapercave.com/wp/wp12551397.jpg'; // Messi campeón
+        const defaultCover = 'https://ca-times.brightspotcdn.com/dims4/default/17d17e6/2147483647/strip/true/crop/4276x2850+0+0/resize/2000x1333!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F71%2Fda%2Fb2a60e6d4cf2999256438a1d94ed%2Faptopix-wcup-argentina-france-soccer-08454.jpg';
         const savedCover = localStorage.getItem('coverUrl') || defaultCover;
         document.getElementById('headerPortada').style.backgroundImage = `url('${savedCover}')`;
 
-        const savedStream = localStorage.getItem('streamEmbed') || '<p class="text-center pt-32 text-gray-400">No hay transmisión ahora</p>';
+        const savedStream = localStorage.getItem('streamEmbed') || '<p class="text-center pt-40 text-2xl text-gray-400">No hay transmisión ahora</p>';
         document.getElementById('liveStream').innerHTML = savedStream;
 
-        // API-Sports
-        const apiKey = 'f7966efcd58692979704f59c9f3f7e113';
+        // Carga lives ejemplo (real cuando haya)
+        document.getElementById('liveMatches').innerHTML = '<div class="card p-12 text-center col-span-3"><p class="text-3xl">No hay partidos en vivo ahora</p></div>';
 
-        // Carga lives (ejemplo básico, expando si quieres)
-        async function loadLives() {
-            const html = '<div class="card p-8 text-center"><h3 class="text-2xl">Ejemplo Live</h3><p class="text-6xl">2 - 1</p><p>Equipo A vs B - En Vivo</p></div>';
-            document.getElementById('liveMatches').innerHTML = html || '<p>No lives ahora</p>';
-        }
-
-        loadLives();
-
-        // Más funciones para odds, standings, fixtures (cargan reales si hay)
+        // Lo mismo para otras secciones
 
     </script>
 </body>
